
    o	step() adds a fuzz for reduction in AIC for 0-df terms.	 (PR#3491)

    o	str(x) gives better output when x is of mode "(".

    o	strwidth(f) and strheight(f) could seg.fault when `f' was a
	function.  The fix [to C-level coerceVector()] now gives an error
	instead of passing through.  This may catch other potential
	problems.

    o	trunc.POSIXt(x) for 0-length x does not return invalid structures
	anymore.  (PR#3763).

    o	Using write.table() setting the `dec' argument and with no
	numeric columns failed.	 (PR#3532)

    o	$<- did not duplicate when it needed to.

    o	Recursive indexing of lists had too little error-checking.
	(related to PR#3324)

    o	Removed warning about names in persistent strings when a
	namespace is saved.

    o	Fixed some malformed error messages in the methods package.

    o	pipes were not opening properly when profiling on a Mac. (PR#1140)

    o	Lapack error messages (PR#3494) and call to DGEQP3 (PR#2867) are
	corrected.

    o	Rd conversion was limiting a file to 1000 pairs of braces,
	without any warning.  Now the limit is 10000, with a warning.
	(PR#3400)

    o	In the tcltk package, the tkimage.*() commands were defined
	nonsensically as widget commands. They have been redefined to be
	more useful now.

    o	Registered group generics were not being used. (PR#3536)

    o	Subsetting data frames did not always correctly detect that
	non-existent columns were specified.

    o	There are many more checks for over-running internal buffers,
	almost always reporting errors.

    o	Added some buffer overflow checking in gram.y.

    o	Internals for complex assignment did not check that function name
	was a symbol, which could cause a segfault.

    o   Fixed bug in S4 methods dispatch that made local variables in the
	generic visible when executing the body of a method, thus violating
	lexical scope.




	**************************************************
	*						 *
	*	       1.7 SERIES NEWS			 *
	*						 *